- [GUI] [FRONTEND] Remove too strict validation for log_condition field
- [API_PARSER] [CYBEREASON] Update timestamp when no logs received during last 24h 
- [AUTHENTICATION] [LDAP] Limit username query to exact matches when authenticating
- [AUTHENTICATION] [LDAP] Use real username returned by LDAP authentication in user infos (including for TOTP profile)


## [2.15.13] - 2024-10-18
### Fixed
- [PORTAL] [TOTP] Use lowercase login when assigning a TOTP profile to a username
- [API_PARSER] [SENTINELONE] Properly get all techniques' names
### Added
- [API_PARSER] [LOCKSELF] New API parser LOCKSELF
### Changed
- [API_PARSER] [CORTEX_XDR] Update alerts url endpoint
### Removed
- [API_PARSER] [PROOFPOINT_POD] Useless 'metadata' field


## [2.15.12] - 2024-10-08
### Fixed
- [API_PARSER] [BEYONDTRUST_PRA] Add missing migration step to set default token value


## [2.15.11] - 2024-10-03
### Added
- [API_PARSER] [BEYONDTRUST_PRA] New API parser BEYONDTRUST_PRA
### Fixed
- [CLUSTER] [PF] Correctly reload configurations when changing SSH/GUI access rules
- [API_PARSER] [CYBEREASON] Update timestamp when no logs are received during the last 24h
- [API_PARSER] [REACHFIVE] Store access token & avoid too many or too large requests


## [2.15.10] - 2024-08-09
### Fixed
- [API_PARSER] [NOZOMI_PROBE] Update timestamp when no logs received during last 24h
- [API_PARSER] [GATEWATCHER_ALERTS] Delayed logs gathering by 5 minutes to avoid alerts being not inserted in API when we're making our request


## [2.15.9] - 2024-07-25
### Fixed
- [API_PARSER] [HARFANGLAB] Hotfix to add a check when powershell_command object is None


## [2.15.8] - 2024-07-24
### Fixed
- [API_PARSER] [HARFANGLAB] Truncate details_powershell.PowershellCommand to 16384 char (as logs can be up to 2M)


## [2.15.7] - 2024-07-22
### Changed
- [API_PARSER] [CROWDSTRIKE] Allow to disable fetching of 'incident' logs
### Fixed